landing page ui added

--- a/webApp/views/landingpage.hbs
+++ b/webApp/views/landingpage.hbs
@@ -1,4 +1,9 @@
-<section>
-  <h1>Woza!</h1>
-  <p>Woza!</p>
-</section>
+{{>navbar}}
+{{>heros}}
+{{>features}}
+{{>benefits}}
+{{>hiw}}
+{{>pricing}}
+{{>testimonials}}
+{{>faq}}
+{{>footer}}
