--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -1,3 +1,88 @@
-<section class="corp_dashboard">
-  
+<section class="skeleton">
+  <section class="sidebar">
+    <div class="logo">
+      <div class="quantiq">
+        <span>
+          <img src="assets/Quant_logo.png" alt="quantlogo">
+        </span>
+        <span>QuantIQ</span>
+      </div>
+    </div>
+
+    <div class="pages">
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/dashboard.svg" alt="dashboard">
+        </span>
+        <span>Dashboard</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/sales_analytics.svg" alt="sales_analytics">
+        </span>
+        <span>Sales Analytics</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/insights.svg" alt="insights">
+        </span>
+        <span>Customer Insights</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/forecasting.svg" alt="forecasting">
+        </span>
+        <span>Forecasting</span>
+      </div>
+      
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/ai_insights.svg" alt="ai_insights">
+        </span>
+        <span>AI Insights</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/sentiment_analysis.svg" alt="sentiment_analysis">
+        </span>
+        <span>Sentiment Analysis</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/esg_metrics.svg" alt="esg_metrics">
+        </span>
+        <span>ESG Metrics</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/files.svg" alt="files">
+        </span>
+        <span>Files</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/settings.svg" alt="settings">
+        </span>
+        <span>Settings</span>
+      </div>
+
+      <div class="page_link">
+        <span>
+          <img src="assets/pagelinks/account_management.svg" alt="account_management">
+        </span>
+        <span>Account Manangement</span>
+      </div>
+    </div>
+  </section>
+
+  <section class="parent_container">
+    
+  </section>
 </section>
