--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 260px 1fr;
   gap: 0;
 }
 .skeleton .sidebar {
@@ -58,7 +58,7 @@ body {
 }
 .skeleton .sidebar .pages .page_link {
   width: 100%;
-  margin-top: 1.2rem;
+  padding: 1rem 0.25rem;
   display: flex;
   justify-content: start;
   align-items: center;
