--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -37,7 +37,7 @@ body{
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 260px 1fr;
   gap: 0;
 
   .sidebar{
@@ -74,7 +74,7 @@ body{
 
       .page_link{
         width: 100%;
-        margin-top: 1.2rem;
+        padding: 1rem .25rem;
         @include flexbox(start, center, row);
 
         & > span:nth-child(1){
