Flex-direction column for body tag

--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -30,6 +30,7 @@ body{
   min-height: 100vh;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -95,5 +96,6 @@ body{
   }
 
   .parent_container{
+
   }
 }
