--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -83,6 +83,31 @@
   </section>
 
   <section class="parent_container">
-    
+    <div class="dynamic_head">
+      <div class="dynamic_title">
+        {{pageTitle}}
+      </div>
+
+      <div class="dynamic_profile">
+        {{!-- <div class="bell_box">
+          <img src="assets/icons/notification.svg" alt="notification">
+        </div> --}}
+
+        <div class="profile_box">
+          <div class="company_img">
+            <img src="assets/icons/organization.svg" alt="company">
+          </div>
+
+          <div class="profile_brief">
+            <div>Njumu Store</div>
+            <div>njumu25store@gmail.com</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="dynamic_body">
+
+    </div>
   </section>
 </section>
