--- a/webApp/views/layouts/main.hbs
+++ b/webApp/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.x.x/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>QuantIQ</title>
+    <title>{{pageTitle}}</title>
 </head>
 <body>
     {{{body}}}
