skeleton awaiting responsive tweaking

--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -99,8 +99,8 @@
           </div>
 
           <div class="profile_brief">
-            <div>Njumu Store</div>
-            <div>njumu25store@gmail.com</div>
+            <div>Company Name</div>
+            <div>company@email.com</div>
           </div>
         </div>
       </div>
