--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -5,8 +5,20 @@
         <span>
           <img src="assets/Quant_logo.png" alt="quantlogo">
         </span>
+
         <span>QuantIQ</span>
       </div>
+
+      <div class="sidebar_toggle">
+        <span>
+          <img src="assets/icons/sidebar_toggle.svg" alt="toggle" class="toggler">
+        </span>
+      </div>
+
+      {{!-- <div class="toggle_sidebar">
+        <img src="assets/icons/hamburger.svg" alt="hamburger">
+        <img src="assets/icons/close-x.svg" alt="close-x" class="hidden">
+      </div> --}}
     </div>
 
     <div class="pages">
